--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div
-            class="collapse navbar-collapse justify-content-between"
-            id="navbarNav"
-          >
+            class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" href="#">Home</a>
@@ -90,9 +88,9 @@
       </nav>
     </header>
     <main>
-      <section class="banner-area">
+      <section class="banner-area" style="margin-top: -54px;">
         <h1>SHADES OF PINK</h1>
-        <h3>A MAKEUP BLOG</h3>
+        <h3 style="margin-bottom: 40px;">A MAKEUP BLOG</h3>
         <img
           src="https://static.wixstatic.com/media/f61af8_e15083b95c954f71a1b4d9a5a78ded70~mv2_d_2121_1312_s_2.jpg/v1/fill/w_1899,h_849,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/f61af8_e15083b95c954f71a1b4d9a5a78ded70~mv2_d_2121_1312_s_2.jpg"
           alt=""
@@ -106,9 +104,7 @@
             alt="..."
           />
           <div class="card-body">
-            <h5 class="card-title">Lifestyle</h5>
-            <p class="card-text">Click here to edit me.</p>
-            <hr />
+            <h5 class="card-title">MAKE-UP</h5>
           </div>
         </div>
         <div class="card">
@@ -118,9 +114,7 @@
             alt="..."
           />
           <div class="card-body">
-            <h5 class="card-title">Family</h5>
-            <p class="card-text">Click here to edit me.</p>
-            <hr />
+            <h5 class="card-title">SKINCARE</h5>
           </div>
         </div>
         <div class="card">
@@ -130,9 +124,7 @@
             alt="..."
           />
           <div class="card-body">
-            <h5 class="card-title">Food</h5>
-            <p class="card-text">Click here to edit me.</p>
-            <hr />
+            <h5 class="card-title">HAIR</h5>
           </div>
         </div>
       </section>
@@ -385,7 +377,7 @@
           </article>
         </div>
       </section>
-      
+
     </main>
     <footer>
       <section class="footer-body m-auto">
